跨域，代理 初始化

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "1200 create node-middleware",
 	"main": "index.js",
 	"scripts": {
-		"dev": "node app.js",
+		"dev": "nodemon app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -23,12 +23,14 @@
 	},
 	"homepage": "https://github.com/k1200/1200-middleware#readme",
 	"dependencies": {
+		"axios": "^0.19.2",
 		"kcors": "^2.2.2",
 		"koa": "^2.11.0",
 		"koa-bodyparser": "^4.3.0",
 		"koa-compress": "^4.0.1",
 		"koa-logger": "^3.2.1",
 		"koa-router": "^8.0.8",
-		"koa-static": "^5.0.0"
+		"koa-static": "^5.0.0",
+		"nodemon": "^2.0.4"
 	}
 }
