--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"koa-logger": "^3.2.1",
 		"koa-router": "^8.0.8",
 		"koa-static": "^5.0.0",
-		"nodemon": "^2.0.4"
+		"nodemon": "^2.0.4",
+		"redis": "^3.0.2"
 	}
 }
