--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "1200 create node-middleware",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon app.js",
+		"dev": "nodemon",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -23,6 +23,7 @@
 	},
 	"homepage": "https://github.com/k1200/1200-middleware#readme",
 	"dependencies": {
+		"@types/node": "^14.0.5",
 		"axios": "^0.19.2",
 		"kcors": "^2.2.2",
 		"koa": "^2.11.0",
@@ -31,7 +32,10 @@
 		"koa-logger": "^3.2.1",
 		"koa-router": "^8.0.8",
 		"koa-static": "^5.0.0",
+		"log4js": "^6.3.0",
 		"nodemon": "^2.0.4",
-		"redis": "^3.0.2"
+		"redis": "^3.0.2",
+		"ts-node": "^8.10.1",
+		"typescript": "^3.9.3"
 	}
 }
