--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "1200 create node-middleware",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon webapp=example log=logs",
+		"dev": "nodemon webapp=jxgOps log=logs",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
