--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
 		"koa-static": "^5.0.0",
 		"log4js": "^6.3.0",
 		"nodemon": "^2.0.4",
-		"redis": "^3.0.2",
-		"ts-node": "^8.10.1",
-		"typescript": "^3.9.3"
+		"redis": "^3.0.2"
 	}
 }
